--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -781,4 +781,5 @@ h1, h2, h3, h4, h5, h6, .page-title, .card-title, .stat-value {
     .modal-footer .btn {
         width: 100%;
     }
-}
+}. m a i n - c o n t e n t   {   m i n - w i d t h :   0 ;   }  
+ 
